# alt-comparepackages

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildall.sh  download.sh  main.cpp
lib/: CMakeLists.txt  buildlib.sh
lib/include/: comparepackages.hpp
lib/src/: comparepackages.cpp
